8May18   * added option -f <STD|EST> to parse GET_HOMOLOGUES_EST FASTA header; updated GET_PHYLOMARKERS reference
31Mar18  * run_get_phylomarkers_pipeline.sh v2.2.2; added [ $no_tree_counter ] && WARNING msg about discarding trees with < 1 internal branches
31Mar18  * updated install instructions
         * prepared new release tagged 1.2.5
	 * uploaded new docker image
30Mar18  * updated linux and macosx binaries for iqtree (v1.6.3) and paup (v4a161)
29Mar18   # Code:
           * get_phylomarkers_fun_lib 29032018; 
	     - compute_MJRC_tree() fix to contend with possible Bug in IQ-TREE v1.6.2 and v1.6.3
	       IQT v1.6.2 and v1.6.3, but not v1.6.1!, cannot compute the mjrc tree from the debug set,
	       claiming that the number of taxa are different across trees when running with FT ???
	       There is not problem with the IQ-TREE run on the same sequences...
	       >>> Therefore check_output was changed for simple warning messages to avoid premature exit <<<
	     - fixed quoting of variables passed to compute_FT_gene_tree_stats() as arguments
	   * run_get_phylomarkers_pipeline.sh 2.2.1_29Mar18
	     - fixed call of compute_MJRC_tree, properly adding the quotes around variables
29Mar18   # Code run_get_phylomarkers_pipeline.sh v2.2.0_29Mar18 and estimate_pangenome_phylogenies.sh v1.0.5_28Mar18
             * check_scripts_in_path() checks wether USER is regular or root 
	         to add symlinks to $HOME/bin or /usr/local/bin, respectivel 	 
10Mar18  * updated linux and macOSX iqtree binaries to version 1.6.2

18Feb18  # Code run_get_phylomarkers_pipeline.sh v2.1.9_18Feb18 and get_phylomarkers_fun_lib v18022018
            * fixed redundant output messages written to logfile
	    * made more shellcheck compliant
         # Manual
            * More detailed and structured manual in html and md formats

17Feb18  * added $distrodir to a nw_reroot call that was missing it
         * made lib/get_phylomarkers_fun_lib more shellcheck compliant 
	 